# pdf-slave-server

./: .gitignore  CHANGELOG.md  README.md  config.yaml  makedeb.sh  pdf-slave-server.cabal  pdf-slave-server.sublime-project  stack.yaml
app/: Main.hs
pdf-slave-server-api/: README.md  pdf-slave-server-api.cabal
pdf-slave-server-api/src/Text/PDF/Slave/Server/: API.hs
pdf-slave-server-cli/: README.md  pdf-slave-server-cli.cabal
pdf-slave-server-cli/app/: Main.hs  Server.hs
pdf-slave-server-cli/src/Text/PDF/Slave/Server/: Client.hs
pdf-slave-server-cli/src/Text/PDF/Slave/Server/Client/: Signature.hs
src/Text/PDF/Slave/: Server.hs
src/Text/PDF/Slave/Server/: Config.hs  DB.hs  Monad.hs  Notification.hs  Util.hs
src/Text/PDF/Slave/Server/DB/: Model.hs
ubuntu/: post.sh
ubuntu/data/etc/: pdf-slave-server.yaml
ubuntu/data/etc/systemd/system/: pdf-slave-server.service
