name:                pdf-slave-server
version:             0.1.0.0
synopsis:            Web service for pdf-slave tool
description:         Please see README.md
homepage:            https://github.com/NCrashed/pdf-slave-server#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:
    Text.PDF.Slave.Server
    Text.PDF.Slave.Server.Config
    Text.PDF.Slave.Server.DB
    Text.PDF.Slave.Server.DB.Model
    Text.PDF.Slave.Server.Monad
  default-language:    Haskell2010
  build-depends:
      base                     >= 4.7      && < 5
    , monad-control            >= 1.0      && < 1.1
    , monad-logger             >= 0.3      && < 0.4
    , mtl                      >= 2.2      && < 2.3
    , persistent               >= 2.6      && < 2.7
    , persistent-postgresql    >= 2.6      && < 2.7
    , persistent-template      >= 2.5      && < 2.6
    , servant                  >= 0.9      && < 0.10
    , servant-server           >= 0.9      && < 0.10
    , text                     >= 1.2      && < 1.3
    , yaml                     >= 0.8      && < 0.9

  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators

executable pdf-slave-server
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , pdf-slave-server

  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies