name:                pdf-slave-server
version:             0.1.0.0
synopsis:            Web service for pdf-slave tool
description:         Please see README.md
homepage:            https://github.com/NCrashed/pdf-slave-server#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:
    Text.PDF.Slave.Server
    Text.PDF.Slave.Server.Config
    Text.PDF.Slave.Server.DB
    Text.PDF.Slave.Server.DB.Model
    Text.PDF.Slave.Server.Monad
    Text.PDF.Slave.Server.Util
  default-language:    Haskell2010
  build-depends:
      base                     >= 4.7      && < 5
    , acid-state               >= 0.14     && < 0.15
    , aeson                    >= 0.11     && < 0.12
    , bytestring               >= 0.10     && < 0.11
    , containers               >= 0.5      && < 0.6
    , hashable                 >= 1.2      && < 1.3
    , immortal                 >= 0.2      && < 0.3
    , monad-control            >= 1.0      && < 1.1
    , monad-logger             >= 0.3      && < 0.4
    , mtl                      >= 2.2      && < 2.3
    , pdf-slave                >= 1.1      && < 1.2
    , pdf-slave-server-api
    , safecopy                 >= 0.9      && < 0.10
    , scientific               >= 0.3      && < 0.4
    , servant                  >= 0.9      && < 0.10
    , servant-server           >= 0.9      && < 0.10
    , text                     >= 1.2      && < 1.3
    , time                     >= 1.6      && < 1.7
    , unbounded-delays         >= 0.1      && < 0.2
    , unordered-containers     >= 0.2      && < 0.3
    , yaml                     >= 0.8      && < 0.9
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators

executable pdf-slave-server
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base                          >= 4.7       && < 5
    , optparse-applicative          >= 0.12      && < 0.13
    , pdf-slave-server
    , wai-extra                     >= 3.0       && < 3.1
    , warp                          >= 3.2       && < 3.3
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies