name:                pdf-slave-server-cli
version:             0.1.0.0
synopsis:            CLI interface for pdf-slave-server
description:         Please see README.md
homepage:            https://github.com/ncrashed/pdf-slave-server#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           Anton Gushcha 2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:
    Text.PDF.Slave.Server.Client
  build-depends:
      base                    >= 4.7    && < 5
    , aeson                   >= 0.11   && < 0.12
    , exceptions              >= 0.8    && < 0.9
    , http-client             >= 0.4    && < 0.5
    , http-client-tls         >= 0.2    && < 0.3
    , mtl                     >= 2.2    && < 2.3
    , pdf-slave-server-api    >= 0.1    && < 0.2
    , servant                 >= 0.9    && < 0.10
    , servant-client          >= 0.9    && < 0.10
    , text                    >= 1.2    && < 1.3
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators

executable pdf-slave-server-cli
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Server
  default-language:    Haskell2010
  build-depends:
      base                     >= 4.7    && < 5
    , bytestring               >= 0.10   && < 0.11
    , optparse-applicative     >= 0.12   && < 0.13
    , pdf-slave-server-api
    , pdf-slave-server-cli
    , servant                  >= 0.9    && < 0.10
    , servant-server           >= 0.9    && < 0.10
    , text                     >= 1.2    && < 1.3
    , wai                      >= 3.2    && < 3.3
    , warp                     >= 3.2    && < 3.3
    , yaml                     >= 0.8    && < 0.9
  default-extensions:
    RecordWildCards
    OverloadedStrings
    DataKinds
    TypeOperators